Graphics and Outline 2

--- a/Shortpaper_BS.tex
+++ b/Shortpaper_BS.tex
@@ -64,7 +64,7 @@ XYZTEST2
         \item Aggregation
         \item Controlled Flooding
         \item Name-Centric Service
-    end{itemize}
+    \end{itemize}
     C$)$ Data PLane\\
     \begin{itemize}
         \item Strategy-In-Network Caching
