--- a/Shortpaper_BS.tex
+++ b/Shortpaper_BS.tex
@@ -65,66 +65,92 @@ als vorleztes
 \section{Related Work}
 XYZTEST2
 \section{Analysis of IoT and NDN}
-This section will talk about the limitations of IoT devices and the challenges of the current Internet architecture.
-\subsection{The connectivity of IoT devices:}
-% The quick brown dog jumps over the lazy fox10.\\
-% \sffamily
-% The quick brown dog jumps over the lazy fox10.
-Currently IoT devices use server-client or host-to-host connection to connect. 
-In the server-client architecture every client has to communicate to the server and with a billion devices the server will be a massive bottleneck. In the host-host architecture, every host has to communicate to every other host. This results in exponential resource consumption.
-The server-client and the host-to-host model both need IP addresses for every single device, which is not possible with a billion devices.
-%check the ip adresses
+This section will talk about the limitations of IoT devices
+ and the challenges of the current Internet architecture.
+\subsection{Challanges of the IoT}
+1) \textbf{The connectivity of IoT devices:}
+Currently, IoT devices use a server-client or host-to-host connection, 
+neither is scalable enough for a billion devices.
+%The server-client architecture has a bottleneck in the server.
+%was für ein Bottlenck (nur ein server kann durch anfragen überlastet werden)
+In the host-host architecture, every host has to communicate with every other host, 
+resulting in exponential resource consumption.
+%The server-client and the host-to-host model both need IP addresses for every single device, which is not possible with a billion devices.
 %NDN solves the IP shortage and it is de-central helps with the bottleneck
+%100
 
-\subsection{Technological Standards:}
-The crucial standards are for the network protocols, the communication protocols, 
-and the data aggregation. 
-The challenge is that 
-%überarbeiten 
+2) \textbf{Technological Standards:}
+The current standards are inadequate for network protocols, communication protocols, 
+and data aggregation. They lead to inefficient caching and aggregation. 
+In addition, mobility protocols are needed to mitigate the effect of a connection loss. 
+%vielleicht schöner und/oder kürzer
+%97
+
+3) \textbf{Mobility:}
+IoT systems that use mobile devices need to note, that devices are numerous and technologically diverse, 
+and consumer reliance is increasing. 
+% über 90
 
 
-\subsection{Mobility:}
-The amount of mobile devices is rising and so are the challenges. 
-The technologies of the mobile devices are divers and the IoT systems need to keep that in mind.
-
-%Quelle 14 und 15
-
-\subsection{Complexity and Integration Issues:}
-IoT systems are composed of many different APIs (Application Programming Interfaces), 
-protocols and platforms. 
+4) \textbf{Complexity and Integration Issues:}
+IoT systems comprise many unique Application Programming Interfaces (APIs), protocols, and platforms. 
 %APIs expeccially are not desined with the resource limitations of IoT devices in mind. 
 % maybe add that later
-The integration of new technologies in the system is very complicated because of all the different combinations. 
-The IoT system should consider the resource limitation of its components.
+The integration of technologies into the system is very complicated 
+due to all the different combinations. 
+This system should consider the resource limitation of its components.
+%100
 
 %AB HIER BEGINNT B
 
-\subsection{NDN Packet Length:}
-Packages in NDN are not bound to a specific length, this is helpful to expand further protocols by adding or subtracting from the overhead.
-IoT devices will send only small packages; because of the limited resources in memory.
-The overhead needs to be kept small, because the information proportion of small packages is way more influenced by a big overhead.
-%to many packages will drain energy and put strain on the network.
-%Quelle 16
+\subsection{NDN for the IoT}
+%erstes mal NDN erwähnt (auser intorduction)
 
-\subsection{Caching in IoT/NDN:}
-To keep the data up to date and reduce unnecessary package flow, we need to integrate caches in to the system. 
-The problem is that the small devices don't have enough memory to keep an efficient cache. 
-The solution is to use in-network caching, a feature of NDN.
+1) \textbf{NDN Packet Length:}
+Packages in NDN are not bound to a specific length, 
+which allows expansion of further protocols by adding or subtracting from the overhead.
+IoT devices are limited in memory, resulting in small packages with a necessity of a small overhead.
+%100
+
+
+
+%Packages in NDN are not bound to a specific length. This is helpful to expand further protocols by adding or subtracting from the overhead.
+%IoT devices will send only small packages; because of the limited resources in memory, resulting in the necessity of a small overhead.
+
+%The overhead must be kept small because the information proportion of small packets is much more influenced by a large overhead.
+%to many packages will drain energy and put strain on the network.
+%Quelle 16 (nicht benutzt)
+2) \textbf{Caching in IoT/NDN:}
+IoT devices have too little memory for efficient caching, resulting in 
+higher unnecessary package flow and a reduction in data freshness.
+The solution is in-network caching, a feature of NDN; that allows 
+% wie wird in-network caching grob umgesetzt?
+
+%ALTER TEXT
+%Data freshness and reduced unnecessary package flow, is achieved by integrating an in-network cache, which is a feature of NDN.
+%To keep the data up to date and reduce unnecessary package flow, we need to integrate caches into the system. 
+%The problem is that the small devices don't have enough memory to keep an efficient cache. 
+%The solution is to use in-network caching, a feature of NDN.
 %ganz kurz in-network caching erklären.
 %Quelle 11
-Even a small cache will dramatically increase the data availability [11].
+%Even a small cache will dramatically increase the data availability [11].
 %Quelle 2
-\subsection{Data Aggregation in Wireless Networks:}
-If a user's query requests for data that includes multiple packages, every single package has to be requested separately and excluding the others.
-This results in a greater overhead and will result in a more unnecessary package flow. The new system should fix the request problem.
 
-\subsection{Naming Problems in Wireless Networks:}
-NDN supports on name-centric services [17], which facilitates access without knowing their location. There is still a need to automate naming convention, because of the size of the Networks. These Names should be kept short to minimize storage usage. 
+
+3) \textbf{Data Aggregation in Wireless Networks:}
+If a user's query requests data that includes multiple packages, 
+each package will be requested separately (excluding the others); 
+resulting in a greater overhead and more unnecessary package flow. 
+The new system should fix the request problem.
+%97
+
+4) \textbf{Naming Problems in Wireless Networks:}
+NDN supports name-centric services [17], which facilitates access without knowing their location. There is still a need to automate naming conventions, because of the size of the Networks. These Names should be kept short to minimize storage usage. 
 %Quelle 18 (3 mal)
 
 
-\subsection{Routing Scalability in NDN:}
-In NDN routing is managed by names, instead of of usual number based systems. The scalability of routing is important to facilitate a large network.
+5) \textbf{Routing Scalability in NDN:}
+In NDN routing is managed by names, instead of usual number based systems. The scalability of routing is important to facilitate a large network.
 % Da fehlt was mach das vielleicht später
 % Quelle 19 und 20
 
@@ -223,7 +249,10 @@ Fining missing packages can also be achieved with the InterestLifeTime parameter
 
 
 \section{Conclusion}
-
+First, the paper highlights the problems of IoT if implemented in IP. 
+%Then it examines cache mechanisms, data aggregation and naming in wireless networks.
+NDN is not built with resource constrained devises in mind. This paper names the problems and solutions of integrating NDN into IoT.
+The result Iot-NDN is a new type network that includes communication and data access, based on names.
 
 
 
